[gd_scene load_steps=6 format=3 uid="uid://dwma0paa83d4g"]

[ext_resource type="Texture2D" uid="uid://du3rr4jjyahw4" path="res://Assets/square.png" id="1"]
[ext_resource type="Script" path="res://Entities/Player.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://np8eto02womm" path="res://Assets/light.png" id="3"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="2"]
size = Vector2(18, 18)

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource("2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("1")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)

[node name="PointLightEnemy" type="PointLight2D" parent="."]
blend_mode = 2
shadow_enabled = true
texture = ExtResource("3")
texture_scale = 0.4

[node name="PointLightEnvironment" type="PointLight2D" parent="."]
energy = 0.7
shadow_enabled = true
texture = ExtResource("3")
texture_scale = 0.4

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("2")

[node name="RefreshTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
[connection signal="timeout" from="RefreshTimer" to="." method="_on_RefreshTimer_timeout"]
